tests/snapshots/cli__list_mutants_well_tested.snap
---
source: tests/cli.rs
assertion_line: 41
expression: "String::from_utf8_lossy(&output.stdout)"
---
src/inside_mod.rs:3: replace outer::inner::name -> &'static str with Default::default()
src/methods.rs:12: replace Foo::double with ()
src/methods.rs:18: replace <impl Display for Foo>::fmt -> fmt::Result with Ok(Default::default())
src/methods.rs:24: replace <impl Debug for &Foo>::fmt -> fmt::Result with Ok(Default::default())
src/nested_function.rs:1: replace has_nested -> u32 with Default::default()
src/nested_function.rs:2: replace has_nested::inner -> u32 with Default::default()
src/result.rs:5: replace simple_result -> Result<&'static str, ()> with Ok(Default::default())
src/result.rs:9: replace error_if_negative -> Result<(), ()> with Ok(Default::default())
src/simple_fns.rs:7: replace returns_unit with ()
src/simple_fns.rs:12: replace returns_42u32 -> u32 with Default::default()
src/simple_fns.rs:17: replace divisible_by_three -> bool with true
src/simple_fns.rs:17: replace divisible_by_three -> bool with false
src/simple_fns.rs:26: replace double_string -> String with "".into()
src/simple_fns.rs:26: replace double_string -> String with "xyzzy".into()

