tests/snapshots/cli__list_mutants_well_tested_examine_and_exclude_name_filter_combined.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
src/module/utils/inside_mod.rs:3: replace outer::inner::name -> &'static str with Default::default()
src/module/utils/sub_utils/subutils_nested_function.rs:1: replace has_nested -> u32 with Default::default()
src/module/utils/sub_utils/subutils_nested_function.rs:2: replace has_nested::inner -> u32 with Default::default()

