tests/snapshots/cli__list_mutants_well_tested_multiple_examine_and_exclude_name_filter_with_files_and_folders.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
src/module/module_methods.rs:16: replace Bar::double with ()
src/module/module_methods.rs:22: replace <impl Display for Bar>::fmt -> fmt::Result with Ok(Default::default())
src/module/module_methods.rs:28: replace <impl Debug for &Bar>::fmt -> fmt::Result with Ok(Default::default())
src/module/utils/inside_mod.rs:3: replace outer::inner::name -> &'static str with Default::default()

