tests/snapshots/cli__list_mutants_with_dir_option.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"

---
src/bin/main.rs:1: replace main with Default::default()
src/bin/main.rs:7: replace factorial with Default::default()

