tests/snapshots/cli__mutants.json.snap
---
source: tests/cli.rs
expression: mutants_json
---
[
  {
    "file": "src/bin/factorial.rs",
    "line": 1,
    "function": "main",
    "return_type": "",
    "replacement": "()"
  },
  {
    "file": "src/bin/factorial.rs",
    "line": 7,
    "function": "factorial",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  }
]
