tests/snapshots/cli__small_well_tested_mutants_with_cargo_arg_release.snap
---
source: tests/cli.rs
expression: stdout
---
Found 1 mutant to test
Copy source to scratch directory ... done
Unmutated baseline ... ok
1 mutant tested: 1 caught

