tests/snapshots/cli__small_well_tested_tree_is_clean.snap
---
source: tests/cli.rs
expression: stdout
---
Found 1 mutant to test
Unmutated baseline ... ok
src/lib.rs:4: replace factorial -> u32 with Default::default() ... caught
1 mutant tested: 1 caught

