tests/snapshots/cli__uncaught_mutant_in_factorial.snap
---
source: tests/cli.rs
expression: redact_timestamps_sizes(stdout)
---
Freshen source tree ... ok in x.xxxs
Copy source and build products to scratch directory ... xxx MB in x.xxxs
Unmutated baseline ... ok in x.xxxs
Auto-set test timeout to x.xxxs
Found 2 mutants to test
src/bin/main.rs:1: replace main with () ... NOT CAUGHT in x.xxxs

